audit fix + updates to next.js and fix word-wrap error on firefox for animated texts

--- a/components/AnimatedText/AnimatedText.module.scss
+++ b/components/AnimatedText/AnimatedText.module.scss
@@ -1,5 +1,5 @@
 .wordWrapper {
-  white-space: nowrap;
   position: relative;
   overflow: hidden;
+  display: inline-block;
 }
